--- a/Makefile.in
+++ b/Makefile.in
@@ -544,7 +544,8 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl $(CURL_LIBS) \
-	$(OPENSSL_LIBS) $(GTK_LIBS) $(WEBKIT2GTK_LIBS) -lmimetic
+	$(OPENSSL_LIBS) $(GTK_LIBS) $(WEBKIT2GTK_LIBS) \
+	-L/usr/local/lib -lmimetic
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
