--- a/Makefile.in
+++ b/Makefile.in
@@ -163,73 +163,73 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	styles/indext.$(OBJEXT) styles/indexm.$(OBJEXT) \
 	styles/sheetm.$(OBJEXT) styles/view.$(OBJEXT) \
 	styles/css.$(OBJEXT) styles/sheets.$(OBJEXT) \
-	text/text.$(OBJEXT) esword/text.$(OBJEXT) \
-	onlinebible/text.$(OBJEXT) html/text.$(OBJEXT) \
-	html/header.$(OBJEXT) odf/text.$(OBJEXT) timer/index.$(OBJEXT) \
-	tasks/logic.$(OBJEXT) tasks/run.$(OBJEXT) \
-	config/logic.$(OBJEXT) bible/logic.$(OBJEXT) \
-	bible/manage.$(OBJEXT) bible/settings.$(OBJEXT) \
-	bible/book.$(OBJEXT) bible/chapter.$(OBJEXT) \
-	bible/import_run.$(OBJEXT) bible/import.$(OBJEXT) \
-	bible/order.$(OBJEXT) bible/css.$(OBJEXT) \
-	bible/editing.$(OBJEXT) notes/logic.$(OBJEXT) \
-	notes/actions.$(OBJEXT) notes/note.$(OBJEXT) \
-	notes/status-1.$(OBJEXT) notes/assign-1.$(OBJEXT) \
-	notes/notes.$(OBJEXT) notes/status-n.$(OBJEXT) \
-	notes/assign-n.$(OBJEXT) notes/click.$(OBJEXT) \
-	notes/poll.$(OBJEXT) notes/summary.$(OBJEXT) \
-	notes/bible-1.$(OBJEXT) notes/comment.$(OBJEXT) \
-	notes/select.$(OBJEXT) notes/unassign-n.$(OBJEXT) \
-	notes/bible-n.$(OBJEXT) notes/create.$(OBJEXT) \
-	notes/severity-1.$(OBJEXT) notes/verses.$(OBJEXT) \
-	notes/bulk.$(OBJEXT) notes/edit.$(OBJEXT) \
-	notes/index.$(OBJEXT) notes/severity-n.$(OBJEXT) \
-	trash/handler.$(OBJEXT) help/index.$(OBJEXT) \
-	confirm/worker.$(OBJEXT) email/index.$(OBJEXT) \
-	email/send.$(OBJEXT) email/receive.$(OBJEXT) \
-	user/notifications.$(OBJEXT) user/account.$(OBJEXT) \
-	user/logic.$(OBJEXT) manage/index.$(OBJEXT) \
-	manage/users.$(OBJEXT) manage/exports.$(OBJEXT) \
-	manage/hyphenation.$(OBJEXT) manage/hyphenate.$(OBJEXT) \
-	manage/write.$(OBJEXT) manage/privileges.$(OBJEXT) \
-	system/index.$(OBJEXT) system/logic.$(OBJEXT) \
-	collaboration/index.$(OBJEXT) collaboration/link.$(OBJEXT) \
-	collaboration/settings.$(OBJEXT) search/rebibles.$(OBJEXT) \
-	search/renotes.$(OBJEXT) access/user.$(OBJEXT) \
-	access/bible.$(OBJEXT) access/logic.$(OBJEXT) \
-	dialog/entry.$(OBJEXT) dialog/list.$(OBJEXT) \
-	dialog/yes.$(OBJEXT) dialog/color.$(OBJEXT) \
-	dialog/books.$(OBJEXT) dialog/upload.$(OBJEXT) \
-	fonts/logic.$(OBJEXT) versification/index.$(OBJEXT) \
-	versification/system.$(OBJEXT) versification/logic.$(OBJEXT) \
-	book/create.$(OBJEXT) compare/index.$(OBJEXT) \
-	compare/compare.$(OBJEXT) jobs/index.$(OBJEXT) \
-	editverse/index.$(OBJEXT) editone/index.$(OBJEXT) \
-	editone/load.$(OBJEXT) editone/save.$(OBJEXT) \
-	editone/verse.$(OBJEXT) editone/logic.$(OBJEXT) \
-	navigation/passage.$(OBJEXT) navigation/update.$(OBJEXT) \
-	navigation/poll.$(OBJEXT) ipc/focus.$(OBJEXT) \
-	ipc/notes.$(OBJEXT) checksum/logic.$(OBJEXT) \
-	editusfm/focus.$(OBJEXT) editusfm/index.$(OBJEXT) \
-	editusfm/load.$(OBJEXT) editusfm/offset.$(OBJEXT) \
-	editusfm/save.$(OBJEXT) editor/styles.$(OBJEXT) \
-	editor/html2usfm.$(OBJEXT) editor/usfm2html.$(OBJEXT) \
-	editor/select.$(OBJEXT) edit/edit.$(OBJEXT) edit/id.$(OBJEXT) \
-	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
-	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
-	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
-	edit/navigate.$(OBJEXT) search/all.$(OBJEXT) \
-	search/index.$(OBJEXT) search/replace.$(OBJEXT) \
-	search/getids.$(OBJEXT) search/replacepre.$(OBJEXT) \
-	search/replacego.$(OBJEXT) search/search2.$(OBJEXT) \
-	search/replace2.$(OBJEXT) search/replacepre2.$(OBJEXT) \
-	search/getids2.$(OBJEXT) search/replacego2.$(OBJEXT) \
-	search/similar.$(OBJEXT) search/strongs.$(OBJEXT) \
-	search/strong.$(OBJEXT) search/originals.$(OBJEXT) \
-	tmp/tmp.$(OBJEXT) workspace/index.$(OBJEXT) \
-	workspace/logic.$(OBJEXT) workspace/settings.$(OBJEXT) \
-	workspace/organize.$(OBJEXT) sendreceive/logic.$(OBJEXT) \
-	sendreceive/index.$(OBJEXT) sendreceive/sendreceive.$(OBJEXT) \
+	text/text.$(OBJEXT) esword/text.$(OBJEXT) olb/text.$(OBJEXT) \
+	html/text.$(OBJEXT) html/header.$(OBJEXT) odf/text.$(OBJEXT) \
+	timer/index.$(OBJEXT) tasks/logic.$(OBJEXT) \
+	tasks/run.$(OBJEXT) config/logic.$(OBJEXT) \
+	bible/logic.$(OBJEXT) bible/manage.$(OBJEXT) \
+	bible/settings.$(OBJEXT) bible/book.$(OBJEXT) \
+	bible/chapter.$(OBJEXT) bible/import_run.$(OBJEXT) \
+	bible/import.$(OBJEXT) bible/order.$(OBJEXT) \
+	bible/css.$(OBJEXT) bible/editing.$(OBJEXT) \
+	notes/logic.$(OBJEXT) notes/actions.$(OBJEXT) \
+	notes/note.$(OBJEXT) notes/status-1.$(OBJEXT) \
+	notes/assign-1.$(OBJEXT) notes/notes.$(OBJEXT) \
+	notes/status-n.$(OBJEXT) notes/assign-n.$(OBJEXT) \
+	notes/click.$(OBJEXT) notes/poll.$(OBJEXT) \
+	notes/summary.$(OBJEXT) notes/bible-1.$(OBJEXT) \
+	notes/comment.$(OBJEXT) notes/select.$(OBJEXT) \
+	notes/unassign-n.$(OBJEXT) notes/bible-n.$(OBJEXT) \
+	notes/create.$(OBJEXT) notes/severity-1.$(OBJEXT) \
+	notes/verses.$(OBJEXT) notes/bulk.$(OBJEXT) \
+	notes/edit.$(OBJEXT) notes/index.$(OBJEXT) \
+	notes/severity-n.$(OBJEXT) trash/handler.$(OBJEXT) \
+	help/index.$(OBJEXT) confirm/worker.$(OBJEXT) \
+	email/index.$(OBJEXT) email/send.$(OBJEXT) \
+	email/receive.$(OBJEXT) user/notifications.$(OBJEXT) \
+	user/account.$(OBJEXT) user/logic.$(OBJEXT) \
+	manage/index.$(OBJEXT) manage/users.$(OBJEXT) \
+	manage/exports.$(OBJEXT) manage/hyphenation.$(OBJEXT) \
+	manage/hyphenate.$(OBJEXT) manage/write.$(OBJEXT) \
+	manage/privileges.$(OBJEXT) system/index.$(OBJEXT) \
+	system/logic.$(OBJEXT) collaboration/index.$(OBJEXT) \
+	collaboration/link.$(OBJEXT) collaboration/settings.$(OBJEXT) \
+	search/rebibles.$(OBJEXT) search/renotes.$(OBJEXT) \
+	access/user.$(OBJEXT) access/bible.$(OBJEXT) \
+	access/logic.$(OBJEXT) dialog/entry.$(OBJEXT) \
+	dialog/list.$(OBJEXT) dialog/yes.$(OBJEXT) \
+	dialog/color.$(OBJEXT) dialog/books.$(OBJEXT) \
+	dialog/upload.$(OBJEXT) fonts/logic.$(OBJEXT) \
+	versification/index.$(OBJEXT) versification/system.$(OBJEXT) \
+	versification/logic.$(OBJEXT) book/create.$(OBJEXT) \
+	compare/index.$(OBJEXT) compare/compare.$(OBJEXT) \
+	jobs/index.$(OBJEXT) editverse/index.$(OBJEXT) \
+	editone/index.$(OBJEXT) editone/load.$(OBJEXT) \
+	editone/save.$(OBJEXT) editone/verse.$(OBJEXT) \
+	editone/logic.$(OBJEXT) navigation/passage.$(OBJEXT) \
+	navigation/update.$(OBJEXT) navigation/poll.$(OBJEXT) \
+	ipc/focus.$(OBJEXT) ipc/notes.$(OBJEXT) \
+	checksum/logic.$(OBJEXT) editusfm/focus.$(OBJEXT) \
+	editusfm/index.$(OBJEXT) editusfm/load.$(OBJEXT) \
+	editusfm/offset.$(OBJEXT) editusfm/save.$(OBJEXT) \
+	editor/styles.$(OBJEXT) editor/html2usfm.$(OBJEXT) \
+	editor/usfm2html.$(OBJEXT) editor/select.$(OBJEXT) \
+	edit/edit.$(OBJEXT) edit/id.$(OBJEXT) edit/index.$(OBJEXT) \
+	edit/load.$(OBJEXT) edit/save.$(OBJEXT) edit/styles.$(OBJEXT) \
+	edit/logic.$(OBJEXT) edit/preview.$(OBJEXT) \
+	edit/position.$(OBJEXT) edit/navigate.$(OBJEXT) \
+	search/all.$(OBJEXT) search/index.$(OBJEXT) \
+	search/replace.$(OBJEXT) search/getids.$(OBJEXT) \
+	search/replacepre.$(OBJEXT) search/replacego.$(OBJEXT) \
+	search/search2.$(OBJEXT) search/replace2.$(OBJEXT) \
+	search/replacepre2.$(OBJEXT) search/getids2.$(OBJEXT) \
+	search/replacego2.$(OBJEXT) search/similar.$(OBJEXT) \
+	search/strongs.$(OBJEXT) search/strong.$(OBJEXT) \
+	search/originals.$(OBJEXT) tmp/tmp.$(OBJEXT) \
+	workspace/index.$(OBJEXT) workspace/logic.$(OBJEXT) \
+	workspace/settings.$(OBJEXT) workspace/organize.$(OBJEXT) \
+	sendreceive/logic.$(OBJEXT) sendreceive/index.$(OBJEXT) \
+	sendreceive/sendreceive.$(OBJEXT) \
 	sendreceive/settings.$(OBJEXT) sendreceive/bibles.$(OBJEXT) \
 	sendreceive/notes.$(OBJEXT) sendreceive/changes.$(OBJEXT) \
 	sendreceive/files.$(OBJEXT) sendreceive/resources.$(OBJEXT) \
@@ -719,7 +719,7 @@ libbibledit_a_SOURCES = \
 	styles/sheets.cpp \
 	text/text.cpp \
 	esword/text.cpp \
-	onlinebible/text.cpp \
+	olb/text.cpp \
 	html/text.cpp \
 	html/header.cpp \
 	odf/text.cpp \
@@ -1523,14 +1523,13 @@ esword/$(DEPDIR)/$(am__dirstamp):
 	@: > esword/$(DEPDIR)/$(am__dirstamp)
 esword/text.$(OBJEXT): esword/$(am__dirstamp) \
 	esword/$(DEPDIR)/$(am__dirstamp)
-onlinebible/$(am__dirstamp):
-	@$(MKDIR_P) onlinebible
-	@: > onlinebible/$(am__dirstamp)
-onlinebible/$(DEPDIR)/$(am__dirstamp):
-	@$(MKDIR_P) onlinebible/$(DEPDIR)
-	@: > onlinebible/$(DEPDIR)/$(am__dirstamp)
-onlinebible/text.$(OBJEXT): onlinebible/$(am__dirstamp) \
-	onlinebible/$(DEPDIR)/$(am__dirstamp)
+olb/$(am__dirstamp):
+	@$(MKDIR_P) olb
+	@: > olb/$(am__dirstamp)
+olb/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) olb/$(DEPDIR)
+	@: > olb/$(DEPDIR)/$(am__dirstamp)
+olb/text.$(OBJEXT): olb/$(am__dirstamp) olb/$(DEPDIR)/$(am__dirstamp)
 html/$(am__dirstamp):
 	@$(MKDIR_P) html
 	@: > html/$(am__dirstamp)
@@ -2845,7 +2844,7 @@ mostlyclean-compile:
 	-rm -f navigation/*.$(OBJEXT)
 	-rm -f notes/*.$(OBJEXT)
 	-rm -f odf/*.$(OBJEXT)
-	-rm -f onlinebible/*.$(OBJEXT)
+	-rm -f olb/*.$(OBJEXT)
 	-rm -f paratext/*.$(OBJEXT)
 	-rm -f parsewebdata/*.$(OBJEXT)
 	-rm -f personalize/*.$(OBJEXT)
@@ -3181,7 +3180,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@notes/$(DEPDIR)/unassign-n.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@notes/$(DEPDIR)/verses.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@odf/$(DEPDIR)/text.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@onlinebible/$(DEPDIR)/text.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@olb/$(DEPDIR)/text.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@paratext/$(DEPDIR)/index.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@paratext/$(DEPDIR)/logic.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@parsewebdata/$(DEPDIR)/ParseMultipartFormData.Po@am__quote@
@@ -3830,8 +3829,8 @@ distclean-generic:
 	-rm -f notes/$(am__dirstamp)
 	-rm -f odf/$(DEPDIR)/$(am__dirstamp)
 	-rm -f odf/$(am__dirstamp)
-	-rm -f onlinebible/$(DEPDIR)/$(am__dirstamp)
-	-rm -f onlinebible/$(am__dirstamp)
+	-rm -f olb/$(DEPDIR)/$(am__dirstamp)
+	-rm -f olb/$(am__dirstamp)
 	-rm -f paratext/$(DEPDIR)/$(am__dirstamp)
 	-rm -f paratext/$(am__dirstamp)
 	-rm -f parsewebdata/$(DEPDIR)/$(am__dirstamp)
@@ -3909,7 +3908,7 @@ clean-am: clean-binPROGRAMS clean-generic clean-noinstLIBRARIES \
 
 distclean: distclean-am
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
-	-rm -rf access/$(DEPDIR) assets/$(DEPDIR) bible/$(DEPDIR) book/$(DEPDIR) bootstrap/$(DEPDIR) changes/$(DEPDIR) checks/$(DEPDIR) checksum/$(DEPDIR) client/$(DEPDIR) collaboration/$(DEPDIR) compare/$(DEPDIR) config/$(DEPDIR) confirm/$(DEPDIR) consistency/$(DEPDIR) database/$(DEPDIR) database/config/$(DEPDIR) demo/$(DEPDIR) developer/$(DEPDIR) dialog/$(DEPDIR) edit/$(DEPDIR) editone/$(DEPDIR) editor/$(DEPDIR) editusfm/$(DEPDIR) editverse/$(DEPDIR) email/$(DEPDIR) esword/$(DEPDIR) executable/$(DEPDIR) export/$(DEPDIR) filter/$(DEPDIR) flate/$(DEPDIR) fonts/$(DEPDIR) help/$(DEPDIR) html/$(DEPDIR) index/$(DEPDIR) ipc/$(DEPDIR) jobs/$(DEPDIR) journal/$(DEPDIR) jsonxx/$(DEPDIR) ldap/$(DEPDIR) lexicon/$(DEPDIR) library/$(DEPDIR) locale/$(DEPDIR) manage/$(DEPDIR) mapping/$(DEPDIR) mbedtls/$(DEPDIR) menu/$(DEPDIR) microtar/$(DEPDIR) miniz/$(DEPDIR) navigation/$(DEPDIR) notes/$(DEPDIR) odf/$(DEPDIR) onlinebible/$(DEPDIR) paratext/$(DEPDIR) parsewebdata/$(DEPDIR) personalize/$(DEPDIR) public/$(DEPDIR) pugixml/$(DEPDIR) quill/$(DEPDIR) related/$(DEPDIR) resource/$(DEPDIR) rss/$(DEPDIR) search/$(DEPDIR) sendreceive/$(DEPDIR) session/$(DEPDIR) setup/$(DEPDIR) sources/$(DEPDIR) sprint/$(DEPDIR) sqlite/$(DEPDIR) statistics/$(DEPDIR) styles/$(DEPDIR) sword/$(DEPDIR) sync/$(DEPDIR) system/$(DEPDIR) tasks/$(DEPDIR) text/$(DEPDIR) timer/$(DEPDIR) tmp/$(DEPDIR) trash/$(DEPDIR) unittests/$(DEPDIR) user/$(DEPDIR) utf8proc/$(DEPDIR) versification/$(DEPDIR) webbible/$(DEPDIR) webserver/$(DEPDIR) workspace/$(DEPDIR)
+	-rm -rf access/$(DEPDIR) assets/$(DEPDIR) bible/$(DEPDIR) book/$(DEPDIR) bootstrap/$(DEPDIR) changes/$(DEPDIR) checks/$(DEPDIR) checksum/$(DEPDIR) client/$(DEPDIR) collaboration/$(DEPDIR) compare/$(DEPDIR) config/$(DEPDIR) confirm/$(DEPDIR) consistency/$(DEPDIR) database/$(DEPDIR) database/config/$(DEPDIR) demo/$(DEPDIR) developer/$(DEPDIR) dialog/$(DEPDIR) edit/$(DEPDIR) editone/$(DEPDIR) editor/$(DEPDIR) editusfm/$(DEPDIR) editverse/$(DEPDIR) email/$(DEPDIR) esword/$(DEPDIR) executable/$(DEPDIR) export/$(DEPDIR) filter/$(DEPDIR) flate/$(DEPDIR) fonts/$(DEPDIR) help/$(DEPDIR) html/$(DEPDIR) index/$(DEPDIR) ipc/$(DEPDIR) jobs/$(DEPDIR) journal/$(DEPDIR) jsonxx/$(DEPDIR) ldap/$(DEPDIR) lexicon/$(DEPDIR) library/$(DEPDIR) locale/$(DEPDIR) manage/$(DEPDIR) mapping/$(DEPDIR) mbedtls/$(DEPDIR) menu/$(DEPDIR) microtar/$(DEPDIR) miniz/$(DEPDIR) navigation/$(DEPDIR) notes/$(DEPDIR) odf/$(DEPDIR) olb/$(DEPDIR) paratext/$(DEPDIR) parsewebdata/$(DEPDIR) personalize/$(DEPDIR) public/$(DEPDIR) pugixml/$(DEPDIR) quill/$(DEPDIR) related/$(DEPDIR) resource/$(DEPDIR) rss/$(DEPDIR) search/$(DEPDIR) sendreceive/$(DEPDIR) session/$(DEPDIR) setup/$(DEPDIR) sources/$(DEPDIR) sprint/$(DEPDIR) sqlite/$(DEPDIR) statistics/$(DEPDIR) styles/$(DEPDIR) sword/$(DEPDIR) sync/$(DEPDIR) system/$(DEPDIR) tasks/$(DEPDIR) text/$(DEPDIR) timer/$(DEPDIR) tmp/$(DEPDIR) trash/$(DEPDIR) unittests/$(DEPDIR) user/$(DEPDIR) utf8proc/$(DEPDIR) versification/$(DEPDIR) webbible/$(DEPDIR) webserver/$(DEPDIR) workspace/$(DEPDIR)
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-hdr distclean-tags
@@ -3958,7 +3957,7 @@ installcheck-am:
 maintainer-clean: maintainer-clean-am
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
 	-rm -rf $(top_srcdir)/autom4te.cache
-	-rm -rf access/$(DEPDIR) assets/$(DEPDIR) bible/$(DEPDIR) book/$(DEPDIR) bootstrap/$(DEPDIR) changes/$(DEPDIR) checks/$(DEPDIR) checksum/$(DEPDIR) client/$(DEPDIR) collaboration/$(DEPDIR) compare/$(DEPDIR) config/$(DEPDIR) confirm/$(DEPDIR) consistency/$(DEPDIR) database/$(DEPDIR) database/config/$(DEPDIR) demo/$(DEPDIR) developer/$(DEPDIR) dialog/$(DEPDIR) edit/$(DEPDIR) editone/$(DEPDIR) editor/$(DEPDIR) editusfm/$(DEPDIR) editverse/$(DEPDIR) email/$(DEPDIR) esword/$(DEPDIR) executable/$(DEPDIR) export/$(DEPDIR) filter/$(DEPDIR) flate/$(DEPDIR) fonts/$(DEPDIR) help/$(DEPDIR) html/$(DEPDIR) index/$(DEPDIR) ipc/$(DEPDIR) jobs/$(DEPDIR) journal/$(DEPDIR) jsonxx/$(DEPDIR) ldap/$(DEPDIR) lexicon/$(DEPDIR) library/$(DEPDIR) locale/$(DEPDIR) manage/$(DEPDIR) mapping/$(DEPDIR) mbedtls/$(DEPDIR) menu/$(DEPDIR) microtar/$(DEPDIR) miniz/$(DEPDIR) navigation/$(DEPDIR) notes/$(DEPDIR) odf/$(DEPDIR) onlinebible/$(DEPDIR) paratext/$(DEPDIR) parsewebdata/$(DEPDIR) personalize/$(DEPDIR) public/$(DEPDIR) pugixml/$(DEPDIR) quill/$(DEPDIR) related/$(DEPDIR) resource/$(DEPDIR) rss/$(DEPDIR) search/$(DEPDIR) sendreceive/$(DEPDIR) session/$(DEPDIR) setup/$(DEPDIR) sources/$(DEPDIR) sprint/$(DEPDIR) sqlite/$(DEPDIR) statistics/$(DEPDIR) styles/$(DEPDIR) sword/$(DEPDIR) sync/$(DEPDIR) system/$(DEPDIR) tasks/$(DEPDIR) text/$(DEPDIR) timer/$(DEPDIR) tmp/$(DEPDIR) trash/$(DEPDIR) unittests/$(DEPDIR) user/$(DEPDIR) utf8proc/$(DEPDIR) versification/$(DEPDIR) webbible/$(DEPDIR) webserver/$(DEPDIR) workspace/$(DEPDIR)
+	-rm -rf access/$(DEPDIR) assets/$(DEPDIR) bible/$(DEPDIR) book/$(DEPDIR) bootstrap/$(DEPDIR) changes/$(DEPDIR) checks/$(DEPDIR) checksum/$(DEPDIR) client/$(DEPDIR) collaboration/$(DEPDIR) compare/$(DEPDIR) config/$(DEPDIR) confirm/$(DEPDIR) consistency/$(DEPDIR) database/$(DEPDIR) database/config/$(DEPDIR) demo/$(DEPDIR) developer/$(DEPDIR) dialog/$(DEPDIR) edit/$(DEPDIR) editone/$(DEPDIR) editor/$(DEPDIR) editusfm/$(DEPDIR) editverse/$(DEPDIR) email/$(DEPDIR) esword/$(DEPDIR) executable/$(DEPDIR) export/$(DEPDIR) filter/$(DEPDIR) flate/$(DEPDIR) fonts/$(DEPDIR) help/$(DEPDIR) html/$(DEPDIR) index/$(DEPDIR) ipc/$(DEPDIR) jobs/$(DEPDIR) journal/$(DEPDIR) jsonxx/$(DEPDIR) ldap/$(DEPDIR) lexicon/$(DEPDIR) library/$(DEPDIR) locale/$(DEPDIR) manage/$(DEPDIR) mapping/$(DEPDIR) mbedtls/$(DEPDIR) menu/$(DEPDIR) microtar/$(DEPDIR) miniz/$(DEPDIR) navigation/$(DEPDIR) notes/$(DEPDIR) odf/$(DEPDIR) olb/$(DEPDIR) paratext/$(DEPDIR) parsewebdata/$(DEPDIR) personalize/$(DEPDIR) public/$(DEPDIR) pugixml/$(DEPDIR) quill/$(DEPDIR) related/$(DEPDIR) resource/$(DEPDIR) rss/$(DEPDIR) search/$(DEPDIR) sendreceive/$(DEPDIR) session/$(DEPDIR) setup/$(DEPDIR) sources/$(DEPDIR) sprint/$(DEPDIR) sqlite/$(DEPDIR) statistics/$(DEPDIR) styles/$(DEPDIR) sword/$(DEPDIR) sync/$(DEPDIR) system/$(DEPDIR) tasks/$(DEPDIR) text/$(DEPDIR) timer/$(DEPDIR) tmp/$(DEPDIR) trash/$(DEPDIR) unittests/$(DEPDIR) user/$(DEPDIR) utf8proc/$(DEPDIR) versification/$(DEPDIR) webbible/$(DEPDIR) webserver/$(DEPDIR) workspace/$(DEPDIR)
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
